# More-mangas

./: .appveyor.yml  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  iv.yaml  main.py  mangas.json  pyproject.toml  tasks.py
.circleci/: config.yml
.github/workflows/: continous_integration.yml  docker_run_tests.yml  run_tests_in_test_container.yml  update_docker.yml  versions.yml
.semaphore/: semaphore.yml
code/: errors.py  genre.py  manga.py
docs/: documentacion.md  objetivo-0.md  objetivo-1.md  objetivo-2.md  objetivo-3.md  objetivo-4.md  objetivo-5.md  objetivo-6.md
docs/imgs/: img-genera-ssh  img-settings-ssh
manga/: errors.py  genre.py  manga.py  recomendaciones.py  user.py
mangaCode/: manga.py  user.py
tests/: test_recomendaciones.py
