[tool.poetry]
name = "More mangas!"
version =  "0.0.4"
description = "Recomendaciones personalizadas de mangas"
authors = ["gomares <e.gomezacuyo@go.ugr.es>"]

[tool.poetry.dependencies]
python = "^3.10.1"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
pyflakes = "^2.4.0"
pytest = "^6.2.5"
assertpy = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"